Using microtime properly for all Log-specific dates.  Added new tool-method called NotNowButRightNow.  added parent path to request hash for clarity

--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "files": [
             "src/ErrorsToExceptions.php",
             "src/Arrays.php",
+            "src/DateTime.php",
             "src/Debugging.php",
             "src/Headers.php",
             "src/Strings.php"
