--- a/composer.json
+++ b/composer.json
@@ -30,5 +30,8 @@
             "src/Headers.php",
             "src/Strings.php"
         ]
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^5.7"
     }
 }
