--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         }
     ],
     "require": {
-        "monolog/monolog": "^1.21"
+        "monolog/monolog": "^1.21",
+        "vimeo/psalm": "^2.0"
     },
     "autoload": {
         "psr-4" : {
@@ -32,7 +33,6 @@
         ]
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.1",
-        "vimeo/psalm": "^1.0"
+        "phpunit/phpunit": "^7.1"
     }
 }
