--- a/composer.json
+++ b/composer.json
@@ -9,22 +9,24 @@
             "email": "src@enobrev.com"
         }
     ],
+    "config": {
+        "platform": {
+            "php": "7.1"
+        },
+        "sort-packages": true
+    },
     "repositories": [
         {
             "type": "vcs",
             "url": "https://github.com/enobrev/php-tools"
-        },
-        {
-            "type": "vcs",
-            "url":  "https://github.com/melbings/php-dot-notation.git"
         }
     ],
     "require": {
         "php": ">=7.1.0",
         "ext-json": "*",
+        "adbario/php-dot-notation": "^2.2",
         "monolog/monolog": "^1.21",
-        "zendframework/zend-diactoros": "^1.8",
-        "adbario/php-dot-notation": "dev-recursive-merge"
+        "zendframework/zend-diactoros": "^2.1"
     },
     "autoload": {
         "psr-4" : {
@@ -41,6 +43,6 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^7.1",
-        "vimeo/psalm": "^2.0"
+        "vimeo/psalm": "^3.0"
     }
 }
