--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,8 @@
     "require": {
         "php": ">=7.2",
         "ext-json": "*",
-        "adbario/php-dot-notation": "^2.2",
-        "monolog/monolog": "^1.21",
+        "adbario/php-dot-notation": "~2.2",
+        "monolog/monolog": "~1.21",
         "zendframework/zend-diactoros": "1.8.6"
     },
     "autoload": {
@@ -42,7 +42,7 @@
         ]
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.1",
-        "vimeo/psalm": "^3.0"
+        "phpunit/phpunit": "~8.1",
+        "vimeo/psalm": "~3.2"
     }
 }
