--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "php": ">=7.2",
         "ext-json": "*",
         "adbario/php-dot-notation": "~2.2",
-        "monolog/monolog": "~1.21",
+        "monolog/monolog": "^2.0",
         "zendframework/zend-diactoros": "1.8.6"
     },
     "autoload": {
