--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,9 @@
         "php": ">=7.2",
         "ext-json": "*",
         "adbario/php-dot-notation": "~2.2",
-        "monolog/monolog": "^2.0",
-        "zendframework/zend-diactoros": "1.8.6"
+        "laminas/laminas-diactoros": "^2.2",
+        "laminas/laminas-httphandlerrunner": "^1.1",
+        "monolog/monolog": "^2.0"
     },
     "autoload": {
         "psr-4" : {
