--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "php": ">=7.2",
         "ext-json": "*",
         "adbario/php-dot-notation": "~2.2",
-        "icanboogie/inflector": "^2.0",
+        "doctrine/inflector": "^2.0",
         "laminas/laminas-diactoros": "^2.2",
         "laminas/laminas-httphandlerrunner": "^1.1",
         "monolog/monolog": "^2.0"
