--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "config": {
         "platform": {
-            "php": "7.2"
+            "php": "7.4"
         },
         "sort-packages": true
     },
@@ -22,7 +22,7 @@
         }
     ],
     "require": {
-        "php": ">=7.2",
+        "php": ">=7.4",
         "ext-json": "*",
         "adbario/php-dot-notation": "~2.2",
         "doctrine/inflector": "^2.0",
@@ -44,7 +44,7 @@
         ]
     },
     "require-dev": {
-        "phpunit/phpunit": "~8.1",
-        "vimeo/psalm": "~3.2"
+        "phpunit/phpunit": "^9.4",
+        "vimeo/psalm": "^4.1"
     }
 }
