--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,6 @@
         ]
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.4",
-        "vimeo/psalm": "^4.1"
+        "phpunit/phpunit": "^9.4"
     }
 }
