--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "enobrev/php-tools",
     "description": "General Tools",
+    "version": "1.0.1",
     "type": "library",
     "license": "MIT",
     "authors": [
