stopped referencing 8.1 fork of adbario/php-dot-notation and updated dependencies

--- a/composer.json
+++ b/composer.json
@@ -20,16 +20,12 @@
         {
             "type": "vcs",
             "url": "https://github.com/enobrev/php-tools"
-        },
-        {
-            "type": "git",
-            "url":  "https://github.com/enobrev/php-dot-notation.git"
         }
     ],
     "require": {
         "php": ">=8.1",
         "ext-json": "*",
-        "adbario/php-dot-notation": "2.x-dev",
+        "adbario/php-dot-notation": "^3.1",
         "doctrine/inflector": "^2.0",
         "laminas/laminas-diactoros": "^2.2",
         "laminas/laminas-httphandlerrunner": "^2.0",
